--- a/Resources/views/AuditForm/list.html.twig
+++ b/Resources/views/AuditForm/list.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
 <div class="container">
-    <h3>Forms:</h3>
     <div class="span10 offset1">
+        <legend>Forms:</legend>
         <table class="table table-condensed table-hover">
             <caption>List of existing Forms</caption>
             <thead>
