--- a/Resources/views/AuditForm/view.html.twig
+++ b/Resources/views/AuditForm/view.html.twig
@@ -4,14 +4,14 @@
 
 {% block body %}
 <div class="container">
-    <legend>
-        Audit Form
-        <a href="{{ path( 'wgauditform_edit', { 'id': form.id } ) }}" style="font-size: 10px">
-            <i class="icon-pencil"></i> Edit
-        </a>
-    </legend>
-
     <div class="span10 offset1">
+        <legend>Audit Form
+            <div class="btn-group pull-right">
+                <a class="btn btn-mini" href="{{ path( 'wgauditform_edit', { 'id': form.id } ) }}" style="font-size: 10px">
+                    <i class="icon-pencil"></i> Edit
+                </a>
+            </div>
+        </legend>
         <table class="table table-condensed">
             <thead>
                 <tr>
