--- a/Resources/views/AuditFormField/index.html.twig
+++ b/Resources/views/AuditFormField/index.html.twig
@@ -3,10 +3,11 @@
 {% block body %}
 <div class="container">
     <div class="span10 offest1">
-        <legend>Existing Fields</legend>
-            <a href="{{ path( 'wgauditformfield_add' ) }}" class="btn btn-small">
+        <legend>Existing Fields
+            <a href="{{ path( 'wgauditformfield_add' ) }}" class="btn btn-small pull-right">
                 <i class="icon-plus"></i> Add a new field
             </a>
+        </legend>
         <table class="table table-condensed table-hover">
             <caption>List of existing fields</caption>
             <tbody>
