--- a/Resources/views/AuditFormField/view.html.twig
+++ b/Resources/views/AuditFormField/view.html.twig
@@ -3,14 +3,15 @@
 {% block body %}
 <div class="container">
     <div class="span10 offset1">
-        <legend>Field view</legend>
-        <div class="btn-group">
-            <a class="btn btn-mini" href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}"><i class="icon-pencil"></i> Edit</a>
-            <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
-            <ul class="dropdown-menu">
-                <li><a href="{{ path( 'wgauditformfield_delete', { 'id': field.id } ) }}"><i class="icon-trash"></i> Delete</a></li>
-            </ul>
-        </div>
+        <legend>Field view
+            <div class="btn-group pull-right">
+                <a class="btn btn-mini" href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}"><i class="icon-pencil"></i> Edit</a>
+                <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="{{ path( 'wgauditformfield_delete', { 'id': field.id } ) }}"><i class="icon-trash"></i> Delete</a></li>
+                </ul>
+            </div>
+        </legend>
         <table class="table table-condensed table-hover">
             <caption>Field ID number: {{ field.id }}</caption>
             <tbody>
