--- a/Resources/views/AuditFormSection/view.html.twig
+++ b/Resources/views/AuditFormSection/view.html.twig
@@ -5,28 +5,26 @@
 {% block body %}
 <div class="container">
     <div class="span10 offset1">
-        <legend>Section: {{ section.title }}</legend>
+        <legend>Section: {{ section.title }}
+            <div class="btn-group pull-right">
+                <a class="btn btn-mini" href="{{ path( 'wgauditformsection_edit', { 'id': section.id } ) }}"><i class="icon-pencil"></i> Edit</a>
+                <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="{{ path( 'wgauditformsection_delete', { 'id': section.id } ) }}"><i class="icon-trash"></i> Delete</a></li>
+                </ul>
+            </div>
+        </legend>
         <table class="table table-condensed">
             <thead>
                 <tr>
                     <th>Title</th>
                     <th>Description</th>
-                    <th></th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>{{ section.auditform }}</td>
                     <td>{{ section.description }}</td>
-                    <td>
-                        <div class="btn-group">
-                            <a class="btn btn-mini" href="{{ path( 'wgauditformsection_edit', { 'id': section.id } ) }}"><i class="icon-pencil"></i> Edit</a>
-                            <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="{{ path( 'wgauditformsection_delete', { 'id': section.id } ) }}"><i class="icon-trash"></i> Delete</a></li>
-                            </ul>
-                        </div>
-                    </td>
                 </tr>
             </tbody>
         </table>
