--- a/Resources/views/Audit/index.html.twig
+++ b/Resources/views/Audit/index.html.twig
@@ -3,10 +3,12 @@
 {% block body %}
 {{ parent() }}
 <div class="container">
-    <legend>Audits
-        <a data-toggle="modal" data-target="#modal" href="{{ path( 'wgauditform_list' ) }}" class="btn btn-small pull-right">Create new Audit</a>
-    </legend>
     <div class="span10 offset1">
+        <legend>Audits
+            <a href="{{ path( 'wgauditform_list' ) }}" class="btn btn-small pull-right">
+                <i class="icon-plus"></i> Create new Audit
+            </a>
+        </legend>
         <table class="table table-hover">
             <caption>List of completed Audits</caption>
             <thead>
