--- a/Resources/views/AuditFormSection/edit.html.twig
+++ b/Resources/views/AuditFormSection/edit.html.twig
@@ -23,9 +23,10 @@
                         FORM need 1 and only 1 action (path) to be rendered (NOT dynamic)
                     #}
                     {% if ufields is not empty %}
-                        <form action="{{ path( 'wgauditformsection_add_field', { 'id' : section.id ,'field_id': field.id } ) }}">
+                        <form action="{#{ path( 'wgauditformsection_add_field', { 'id' : section.id ,'field_id': field.id } ) }#}">
                             <div class="input-append">
                                 <select name="field_id">
+                                    <option value="-1">(Please select)</option>
                                     {% for field in ufields %}
                                     <option value="{{ field.id }}">{{ field.title }}</option>
                                     {% endfor %}
