--- a/Resources/views/AuditForm/index.html.twig
+++ b/Resources/views/AuditForm/index.html.twig
@@ -31,11 +31,25 @@
                         </td>
                         <td>
                             <div class="btn-group">
-                                <a class="btn btn-mini" href="{{ path( 'wgauditform_view', { 'id': form.id } ) }}"><i class="icon-eye-open"></i> View</a>
-                                <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+                                <a class="btn btn-mini" 
+                                   href="{{ path( 'wgauditform_view', { 'id': form.id } ) }}">
+                                    <i class="icon-eye-open"></i> View
+                                </a>
+                                <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" 
+                                   href="#">
+                                    <span class="caret"></span>
+                                </a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="{{ path( 'wgauditform_edit', { 'id': form.id } ) }}"><i class="icon-pencil"></i> Edit</a></li>
-                                    <li><a href="{{ path( 'wgauditform_delete', { 'id': form.id } ) }}"><i class="icon-trash"></i> Delete</a></li>
+                                    <li>
+                                        <a href="{{ path( 'wgauditform_edit', { 'id': form.id } ) }}">
+                                            <i class="icon-pencil"></i> Edit
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="{{ path( 'wgauditform_delete', { 'id': form.id } ) }}">
+                                            <i class="icon-trash"></i> Delete
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
                         </td>
