--- a/Resources/views/AuditFormField/load.html.twig
+++ b/Resources/views/AuditFormField/load.html.twig
@@ -11,9 +11,20 @@
     </td>
     <td>
         <div class="btn-group">
-            <a class="btn btn-mini"  data-toggle="modal" data-target="#modal" href="{{ path( 'wgauditformfield_view', { 'id': field.id } ) }}">
+            <a class="btn btn-mini" 
+               href="{{ path( 'wgauditformfield_view', { 'id': field.id } ) }}">
                 <i class="icon-eye-open"></i> View Field
             </a>
+            <noscript>
+                <a class="btn btn-mini"
+                    href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}">
+                    <i class="icon-pencil"></i> Edit Field
+                </a>
+                <a class="btn btn-mini" 
+                   href="{{ path( 'wgauditformsection_remove', { 'id' : section.id ,'field_id': field.id } ) }}">
+                    <i class="icon-minus"></i> Remove Field
+                </a>                
+            </noscript>
             <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
                 <span class="caret"></span>
             </a>
@@ -24,7 +35,8 @@
                     </a>
                 </li>
                 <li>
-                    <a class="audit-field-remove" href="{{ path( 'wgauditformsection_remove', { 'id' : section.id ,'field_id': field.id } ) }}">
+                    <a class="audit-field-remove" 
+                       href="{{ path( 'wgauditformsection_remove', { 'id' : section.id ,'field_id': field.id } ) }}">
                         <i class="icon-minus"></i> Remove Field
                     </a>
                 </li>
