--- a/Resources/views/AuditForm/list.html.twig
+++ b/Resources/views/AuditForm/list.html.twig
@@ -25,7 +25,12 @@
                                 NO
                             {% endif %}
                         </td>
-                        <td><a href="{{ path( 'wgaudit_add', { 'id' : form.id } ) }}" class="btn btn-mini"><i class="icon-edit"></i> Pick</a></td>
+                        <td>
+                            <a class="btn btn-mini" 
+                               href="{{ path( 'wgaudit_add', { 'id' : form.id } ) }}">
+                                <i class="icon-edit"></i> Pick
+                            </a>
+                        </td>
                     </tr>
                 {% else %}
                     <tr>
