--- a/Resources/views/AuditFormField/view.html.twig
+++ b/Resources/views/AuditFormField/view.html.twig
@@ -5,10 +5,26 @@
     <div class="span10 offset1">
         <legend>Field view
             <div class="btn-group pull-right">
-                <a class="btn btn-mini" href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}"><i class="icon-pencil"></i> Edit</a>
-                <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+                <a class="btn btn-mini" 
+                   href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}">
+                    <i class="icon-pencil"></i> Edit
+                </a>
+                <noscript>
+                    <a class="btn btn-mini"
+                        href="{{ path( 'wgauditformfield_delete', { 'id': field.id } ) }}">
+                        <i class="icon-trash"></i> Delete
+                    </a>
+                </noscript>
+                <a class="btn btn-mini dropdown-toggle" 
+                   data-toggle="dropdown" href="#">
+                    <span class="caret"></span>
+                </a>
                 <ul class="dropdown-menu">
-                    <li><a href="{{ path( 'wgauditformfield_delete', { 'id': field.id } ) }}"><i class="icon-trash"></i> Delete</a></li>
+                    <li>
+                        <a href="{{ path( 'wgauditformfield_delete', { 'id': field.id } ) }}">
+                            <i class="icon-trash"></i> Delete
+                        </a>
+                    </li>
                 </ul>
             </div>
         </legend>
